--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -4,11 +4,16 @@
     <title>Alta de Categorías</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link id="stylesheet" type="text/css" rel="stylesheet" href="../../assets/css/estilos.css">
+    <link id="stylesheet" type="text/css" rel="stylesheet" href="../../assets/css/light/estilos.css">
     <script src="set_theme.js" defer></script>
+    <script type="module" src="../../assets/js/assets.js"></script>
+    
+    <!-- incluir jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 </head>
 <body>
+    
     <div class="container">
         <div class="header">
             <label for="colormode">Tema</label>
@@ -23,27 +28,32 @@
 
         <div class="form_main">
             
-            <form action="" method="POST">
+            <form action="" method="POST" id="categoryForm">
                 <fieldset class="fieldsetform">
                     <legend>Datos de la categoría</legend>
-                    <input class="form_input" type="text" name="nombre" placeholder="Nombre">
-                    <input class="form_input" type="text" name="descripcion" placeholder="Descripción">
-                    <input class="form_input" type="text" name="tags" placeholder="Tags (separados por coma)">
+                    <input class="form_input" type="text" name="nombre" placeholder="Nombre" id="name">
+                    <input class="form_input" type="text" name="descripcion" placeholder="Descripción" id="description">
+                    <input class="form_input" type="text" name="tags" placeholder="Tags (separados por coma)", id="tags">
                 </fieldset>
                 <br>
                 <fieldset class="fieldsetform">
                     <legend>Personalización</legend>
                     <label for="color">Color:</label>
-                    <input class="form_input" type="color" name="color" placeholder="Color de la categoría">
+                    <input class="form_input" type="color" name="color" placeholder="Color de la categoría" id="customColor">
                     <label for="icon">Icono</label>
-                    <input class="form_image" type="image" name="icon" src="../../assets/img/icon.svg" placeholder="Icono de la categoría" title="Subir icono">
+                    <input class="form_image" type="image" name="icon" src="../../assets/img/icon.svg" placeholder="Icono de la categoría" title="Subir icono" 
+                    id="customIcon">
                     
                 </fieldset>
                 <div class="buttons">
-                    <button type="button" class="cancelbutton">Cancelar</button>
-                    <button type="button" class="savebutton">Guardar</button>
+                    <button type="reset" class="cancelbutton" id="cancel">Cancelar</button>
+                    <button type="submit" class="savebutton" id="save">Guardar</button>
                 </div>
-        </div>
+
+            </div>
+        </form>
+          
+            
         <div class="header">
             <p>Luciano Nicolas Bovero - 46.152.500</p>
         </div>
