caambiado los nombres de validacion
le erre je

--- a/backend/views/productos.html
+++ b/backend/views/productos.html
@@ -11,7 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="stylesheet" type="text/css" rel="stylesheet" href="../../assets/css/light/estilos.css">
     <script src="set_theme.js" defer></script>
-    <script type="module" src="../../assets/js/assets.js"></script>
+    <script type="module" src="../../assets/js/validaciones.js"></script>
 
     <!-- incluir jquery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
