--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="stylesheet" type="text/css" rel="stylesheet" href="../../assets/css/light/estilos.css">
     <script src="set_theme.js" defer></script>
-    <script type="module" src="../../assets/js/assets.js"></script>
+    <script type="module" src="../../assets/js/validaciones.js"></script>
     
     <!-- incluir jquery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
