--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -26,7 +26,11 @@
             <p>Da de alta una nueva categoría</p>
         </div>
 
+        
         <div class="form_main">
+            <div id="feedback">
+                <p>Error</p>
+            </div>
             
             <form action="" method="POST" id="categoryForm">
                 <fieldset class="fieldsetform">
@@ -39,14 +43,14 @@
                 <fieldset class="fieldsetform">
                     <legend>Personalización</legend>
                     <label for="color">Color:</label>
-                    <input class="form_input" type="color" name="color" placeholder="Color de la categoría" id="customColor">
+                    <input class="form_input" type="color" value=#00cc00 name="color" placeholder="Color de la categoría" id="customColor">
                     <label for="icon">Icono</label>
                     <input class="form_image" type="image" name="icon" src="../../assets/img/icon.svg" placeholder="Icono de la categoría" title="Subir icono" 
                     id="customIcon">
                     
                 </fieldset>
                 <div class="buttons">
-                    <button type="reset" class="cancelbutton" id="cancel">Cancelar</button>
+                    <button type="reset" class="cancelbutton"id="cancelbutton">Cancelar</button>
                     <button type="submit" class="savebutton" id="save">Guardar</button>
                 </div>
 
