--- a/backend/views/lista_productos.html
+++ b/backend/views/lista_productos.html
@@ -3,13 +3,33 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html>
+<html lang="es">
     <head>
-        <title>TODO supply a title</title>
+        <title>Lista Productos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Este archivo se incluye desde el php -->
+        <link id="stylesheet" type="text/css" rel="stylesheet" href="../assets/css/light/estilos.css">
+        <script src="../assets/js/set_theme.js" defer></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div><h1>Listado Productos</h1></div>
+        <table>
+            <thead>
+                <th>Icono</th>
+                <th>Id</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Precio</th>
+                <th>Acciones</th>
+                <tbody>
+
+                </tbody>
+
+
+            </thead>
+        </table>
+
+        <a href="./views/productos.html?add"><button type="button" class="btn-primary">Agregar Productos</button></a>
     </body>
 </html>
