--- a/assets/css/dark/estilos.css
+++ b/assets/css/dark/estilos.css
@@ -48,7 +48,7 @@ body {
     flex-direction: column;
     padding: 20px;
     width: 150vh;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .form_input {
@@ -59,6 +59,18 @@ body {
     border-color: transparent;
     margin-right: 5px;
     text-wrap: pretty;
+    padding: 10px;
+}
+
+#customColor {
+    height: 7vh;
+    width: 7vh;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5px;
+
 }
 
 .form_input:focus {
@@ -75,11 +87,18 @@ body {
 
 .fieldsetform {
     border-radius: 20px;
-    border: 2px solid #ffffff;
+    border: 2px #c0c0c0 solid;
     padding: 10px;
     align-items: center;
     justify-content: center;
     text-align: center;
+    flex-direction: row;
+    display: flex;
+    
+}
+#personalization {
+    display: flex;
+    flex-direction: column;
 }
 
 .form_image {
@@ -96,14 +115,7 @@ body {
     background-color: #000000;
     color: #ffffff;
 }
-.galleryicon {
-    margin-top: 10px;
-    padding: 100px;
-    width: 120px;
-    height: 120px;
-    border-radius: 10px;
-    border: 2px dotted rgba(255, 255, 255, 0.3);
-}
+
 .buttons {
     display: flex;
     flex-direction: row;
@@ -111,8 +123,8 @@ body {
     
 }
 .cancelbutton {
-    background: rgba(251, 0, 0, 0.8);
-    color: #ffffff;
+    background: rgb(255, 0, 0);
+    color: #000000;
     width: 10vh;
     display: flex;
     height: 4vh;
@@ -121,12 +133,15 @@ body {
     margin-top: 10px;
     margin-right: 5px;
     margin-left: 5px;
+    text-anchor: middle;
     font-family: "Product Sans";
     font-size: 16px;
+    justify-content: center;
+    align-items: center;
 }
 .savebutton {
     background: rgba(43, 255, 0, 0.8);
-    color: #ffffff;
+    color: #000000;
     width: 10vh;
     height: 4vh;
     border-radius: 5px;
@@ -137,7 +152,20 @@ body {
     margin-left: 5px;
     font-family: "Product Sans";
     font-size: 16px;
+    text-anchor: middle;
+    justify-content: center;
+    align-items: center;
+
 }
+.cancelbutton:hover {
+    background: rgba(255, 0, 0, 0.8);
+    color: #ffffff;
+}
+.savebutton:hover {
+    background: rgba(43, 255, 0, 0.8);
+    color: #ffffff;
+}
+
 #feedback {
     display: none;
     flex-direction: column;
@@ -149,4 +177,119 @@ body {
     text-align: center;
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.dropper {
+    display: none;
+}
+
+.dropper_tag {
+    background: rgba(0, 0, 0, 0.3);
+    margin: 10px;
+    border: #c0c0c0 2px dashed;
+    display: inline-block;
+    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 20px
+
+}
+
+#previewImage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    height: auto;
+    width: 60px;
+    padding: 50px;
+
+}
+
+
+
+th {
+    background: rgba(24, 146, 0, 0.8);
+    padding: 5px;
+    border-radius: 5px;
+    color: #ffffff;
+    text-align: center;
+    font-family: "Product Sans";
+    font-size: 16px;
+}
+ 
+
+td {
+    background: rgba(0, 0, 0, 0.616);
+    border-radius: 5px; 
+    color: #ffffff;
+    text-align: center;
+    
+
+}
+
+.btn-primary {
+    background: rgba(24, 146, 0, 0.8);
+    color: #000000;
+    width: 100%;
+    height: 4vh;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: none;
+    font-family: "Product Sans";
+    font-size: 16px;
+    text-anchor: middle;
+}
+
+.btn-primary:hover {
+    background: rgba(7, 39, 0, 0.8);
+    color: #ffffff;
+}
+
+.btn-neutral {
+    background: rgba(61, 61, 61, 0.8);
+    color: #ffffff;
+    width: 100%;
+    height: 4vh;
+    border-radius: 20px;
+    border: none;
+    font-family: "Product Sans";
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-size: 16px;
+    text-anchor: middle;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    align-content: center;
+    align-self: center;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.btn-neutral:hover {
+    background: rgba(129, 129, 129, 0.8);
+    color: #ffffff;
+}
+
+
+
+.btn-danger {
+    background: rgba(255, 0, 0, 0.8);
+    color: #000000;
+    width: 100%;
+    height: 4vh;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: none;
+    font-family: "Product Sans";
+    font-size: 16px;
+    text-anchor: middle;
+}
+
+.categorycolor {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    display: inline-block;
 }
