--- a/backend/views/productos.html
+++ b/backend/views/productos.html
@@ -34,71 +34,34 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div class="form_main">
             <div id="feedback">
             </div>
-            <form action="" method="POST", id="productForm" type="multipart/form-data">
+            <form action="../../backend/productos.php" method="POST", id="productForm" enctype="multipart/form-data">
                 <fieldset class="fieldsetform">
                     <legend>Datos del Producto</legend>
-                    <input class="form_input" type="text" name="nombre" placeholder="Nombre" id="name">
-                    <input class="form_input" type="text" name="descripcion" placeholder="Descripción" id="description">
-                    <input class="form_input" type="text" name="precio" placeholder="Precio", id="price">
-                    <select title="Categoria" name="categoria" id="category" class="select">
-                        <optgroup label="Tecnologia">
-                            <option value="computers">Computadoras</option>
-                            <option value="printers">Impresoras</option>
-                        </optgroup>
-                        <option value="audio">Audio</option>
+                    <input class="form_input" type="text" name="name" placeholder="Nombre" id="name">
+                    <input class="form_input" type="text" name="description" placeholder="Descripción" id="description">
+                    <input class="form_input" type="text" name="price" placeholder="Precio", id="price">
+                    <select title="Categoria" name="category" id="category" class="select">
+                        <option value="0" disabled selected>Selecciona una categoria</option>
                     </select>
                     
+                </fieldset>
+                <fieldset class="fieldsetform" id="personalization">
+                    <legend>Personalización</legend>
                     <!-- Dropzone -->
                     
                     
-                    <input type="file" placeholder="Subir imagen" id="image" class="dropper" accept="image/png, image/jpeg">
+                    <input name= "image" type="file" placeholder="Subir imagen" id="image" class="dropper" accept="image/png, image/jpeg">
                     <label for="image" class="dropper_tag">
                         <img id="previewImage" alt="Vista previa de la imagen" src="../../assets/img/galleryadd.svg">
                     </label>
-
-                            
                     
                 </fieldset>
+
                 <div class="buttons">
                     <button type="reset" class="cancelbutton" id="cancelbutton">Cancelar</button>
-                    <button type="submit" class="savebutton">Guardar</button>
+                    <button type="submit" class="savebutton" name= "savebutton" id="savebutton">Guardar</button>
                 </div>
 
-                <script>
-                    $(document).ready(function() {
-                        $('#image').change(function() {
-                            const previewImage = $('#previewImage')[0];
-                            const file = this.files[0];
-
-                            if (file) {
-                                const reader = new FileReader();
-
-                                reader.onload = function(e) {
-                                    previewImage.src = e.target.result;
-                                };
-
-                                reader.readAsDataURL(file);
-                                $('#previewImage').css('height', 'auto');
-                                $('#previewImage').css('width', '400px');
-                                $('#previewImage').css('padding', '10px');
-                            } else {
-                                previewImage.src = '';
-                                $('#previewImage').attr('src', '../../assets/img/galleryadd.svg');
-                                $('#previewImage').css('height', 'auto');
-                                $('#previewImage').css('width', '60px');
-                                $('#previewImage').css('padding', '50px');
-                                $('#image').val('');
-                            }
-                        });
-                        $('#cancelbutton').click(function() {
-                            $('#previewImage').attr('src', '../../assets/img/galleryadd.svg');
-                            $('#previewImage').css('height', 'auto');
-                            $('#previewImage').css('width', '60px');
-                            $('#previewImage').css('padding', '50px');
-                            $('#image').val('');
-                        })
-                    });
-                    </script>  
         </div>
         <div class="header">
             <p>Luciano Nicolas Bovero - 46.152.500</p>
