--- a/assets/css/dark/estilos.css
+++ b/assets/css/dark/estilos.css
@@ -17,7 +17,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 100vh;
     margin: 0;
 }
 
@@ -27,6 +26,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100%;
+    width: 90%;
 }
 
 .header {
